add html template

--- a/index.html
+++ b/index.html
@@ -1,14 +1,43 @@
 <!doctype html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8" />
-        <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Travel life</title>
-    </head>
-    <body>
-        <p>hello!</p>
-        <button class="button" id="button">My Button</button>
-        <script type="module" src="/js/main.js"></script>
-    </body>
+  <head>
+    <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Travel life</title>
+  </head>
+  <body>
+    <main>
+
+      <!-- Header --> 
+      <ul>
+        <li>
+          <span>Durations</span>
+          <span>8 months</span>
+        </li>
+        <li>
+          <span>Vehicle</span>
+          <span>Mercedes 207D 1982</span>
+        </li>
+        <li>
+          <span>Passengers</span>
+          <span>Leïla & Axel</span>
+        </li>
+        <li>
+          <span>Locations</span>
+          <span>Europe</span>
+        </li>
+      </ul>
+      
+      <!-- Title -->
+      <h1>TRAVEL LIFE</h1>
+
+      <!-- Image -->
+      <div>
+        <img>
+      </div>
+
+    </main>
+    <script type="module" src="/js/main.js"></script>
+  </body>
 </html>
