--- a/index.html
+++ b/index.html
@@ -34,7 +34,10 @@
 
       <!-- Image -->
       <div>
-        <img>
+        <picture>
+          <source srcset="/assets/images/cover.avif" type="image/avif">
+          <img src="/assets/images/cover.jpg" alt="">
+        </picture>
       </div>
 
     </main>
