--- a/index.html
+++ b/index.html
@@ -7,36 +7,44 @@
     <title>Travel life</title>
   </head>
   <body>
-    <main>
+    <main class="main">
 
       <!-- Header --> 
-      <ul>
-        <li>
-          <span>Durations</span>
-          <span>8 months</span>
-        </li>
-        <li>
-          <span>Vehicle</span>
-          <span>Mercedes 207D 1982</span>
-        </li>
-        <li>
-          <span>Passengers</span>
-          <span>Leïla & Axel</span>
-        </li>
-        <li>
-          <span>Locations</span>
-          <span>Europe</span>
-        </li>
-      </ul>
+      <header>
+        <ul class="header-container">
+          <li class="header-block">
+            <span class="header-subtext">Durations</span>
+            <span class="header-text">8 months</span>
+          </li>
+          <li class="header-block">
+            <span class="header-subtext">Vehicle</span>
+            <span class="header-text">Mercedes 207D 1982</span>
+          </li>
+          <li class="header-block">
+            <span class="header-subtext">Passengers</span>
+            <span class="header-text">Leïla & Axel</span>
+          </li>
+          <li class="header-block">
+            <span class="header-subtext">Locations</span>
+            <span class="header-text">Europe</span>
+          </li>
+        </ul>
+      </header>
       
       <!-- Title -->
-      <h1>TRAVEL LIFE</h1>
+      <h1 class="title">TRAVEL LIFE</h1>
 
       <!-- Image -->
-      <div>
+      <div class="cover-container">
         <picture>
           <source srcset="/assets/images/cover.avif" type="image/avif">
-          <img src="/assets/images/cover.jpg" alt="">
+          <img 
+            class="cover-img" 
+            src="/assets/images/cover.jpg" 
+            alt="" 
+            width="900" 
+            height="675"
+          >
         </picture>
       </div>
 
