fix title position with relative container and absolute position on title

--- a/index.html
+++ b/index.html
@@ -31,21 +31,23 @@
         </ul>
       </header>
       
-      <!-- Title -->
-      <h1 class="title">TRAVEL LIFE</h1>
+      <div class="relative">
+        <!-- Title -->
+        <h1 class="title">TRAVEL LIFE</h1>
 
-      <!-- Image -->
-      <div class="cover-container">
-        <picture>
-          <source srcset="/assets/images/cover.avif" type="image/avif">
-          <img 
-            class="cover-img" 
-            src="/assets/images/cover.jpg" 
-            alt="" 
-            width="900" 
-            height="675"
-          >
-        </picture>
+        <!-- Image -->
+        <div class="cover-container">
+          <picture>
+            <source srcset="/assets/images/cover.avif" type="image/avif">
+            <img 
+              class="cover-img" 
+              src="/assets/images/cover.jpg" 
+              alt="" 
+              width="900" 
+              height="675"
+            >
+          </picture>
+        </div>
       </div>
 
     </main>
