make the top header responsive

--- a/index.html
+++ b/index.html
@@ -12,19 +12,19 @@
       <!-- Header --> 
       <header>
         <ul class="header-container">
-          <li class="header-block">
+          <li class="header-block hb-1">
             <span class="header-subtext">Durations</span>
             <span class="header-text">8 months</span>
           </li>
-          <li class="header-block">
+          <li class="header-block hb-2">
             <span class="header-subtext">Vehicle</span>
             <span class="header-text">Mercedes 207D 1982</span>
           </li>
-          <li class="header-block">
+          <li class="header-block hb-3">
             <span class="header-subtext">Passengers</span>
             <span class="header-text">Leïla & Axel</span>
           </li>
-          <li class="header-block">
+          <li class="header-block hb-4">
             <span class="header-subtext">Locations</span>
             <span class="header-text">Europe</span>
           </li>
