add responsive adjustement block on mobile, to avoid big white middle space

--- a/index.html
+++ b/index.html
@@ -48,6 +48,9 @@
             >
           </picture>
         </div>
+
+        <!-- Responsive adjustement block -->
+        <div class="responsive-adjustement-block"></div>
       </div>
 
     </main>
