add white background css animation

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Travel life</title>
   </head>
   <body>
+    <div class="bg-animation-wrapper"></div>
     <main class="main">
 
       <!-- Header --> 
@@ -30,7 +31,7 @@
           </li>
         </ul>
       </header>
-      
+
       <div class="relative">
         <!-- Title -->
         <h1 class="title">TRAVEL LIFE</h1>
