add lottie-player in index.html, style the player with css in title.css component

--- a/index.html
+++ b/index.html
@@ -34,7 +34,18 @@
 
       <div class="relative">
         <!-- Title -->
-        <h1 class="title">TRAVEL LIFE</h1>
+        <h1 class="title" style="display: none">TRAVEL LIFE</h1>
+
+        <div class="lottie-player-container">
+          <lottie-player
+            autoplay
+            mode="normal"
+            src="/assets/lottie/travel-life.json"
+            style="height: 145px;"
+            class="title-lottie"
+          >
+          </lottie-player>
+        </div>
 
         <!-- Image -->
         <div class="cover-container">
