lottie-animation with lottie-player ok

--- a/index.html
+++ b/index.html
@@ -38,11 +38,11 @@
 
         <div class="lottie-player-container">
           <lottie-player
-            autoplay
             mode="normal"
             src="/assets/lottie/travel-life.json"
             style="height: 145px;"
             class="title-lottie"
+            id="title-lottie"
           >
           </lottie-player>
         </div>
